# pytoolsz

./: README.md  pyproject.toml
src/datasets/: __init__.py  utils.py
src/datasets/covid/: __init__.py
src/datasets/iris/: __init__.py
src/datasets/tstest/: __init__.py
src/pytoolsz/: __init__.py  compress.py  dataframe.py  forecast.py  frame.py  fuzzymatch.py  graph.py  handlepath.py  ppTrans.py  pretools.py  saveExcel.py  tsTools.py  utils.py  utob.py
src/szdatasets/: __init__.py  utils.py
src/szdatasets/covid/: __init__.py
src/szdatasets/iris/: __init__.py
