[project]
name = "pytoolsz"
version = "0.1.0"
description = "A set of Python Tools, mainly used to deal with work problems."
authors = [
    { name = "Sidney Zhang", email = "zly@lyzhang.me" }
]
dependencies = [
    "prophet>=1.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytoolsz"]
