[project]
name = "pytoolsz"
version = "0.1.0"
description = "A set of Python Tools, mainly used to deal with work problems."
authors = [
    {name = "Sidney Zhang", email = "zly@lyzhang.me"},
]
dependencies = [
    "prophet>=1.1.5",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "autogluon>=1.1.1",
    "statsmodels>=0.14.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MulanPSL-2.0"}


[tool.pdm]
distribution = false
